Switch .env format
Using one that we can use with Django modules

--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@ advanced_settings.json
 GenespotRE/secret_settings.py
 migrations/
 .env
+scripts/metadata_featdef_tables.sql
 
 # dummy datasets
 *.tsv
