--- a/sample.env
+++ b/sample.env
@@ -2,5 +2,13 @@
 # To use this file, replace the values below with your project's configuration
 # values and save this file a ".env" (no quotes) in your project's root folder.
 
-export MYSQL_PASSWORD=password
-export PROJECT_ID=0123456789
+MYSQL_ROOT_PASSWORD=password
+GCLOUD_PROJECT_ID=0123456789
+DJANGO_SECRET_KEY=abc123!@#
+BASE_URL=http://127.0.0.1:8080
+API_URL=http://127.0.0.1:8080
+DATABASE_HOST=127.0.0.1
+DATABASE_NAME=dev
+DATABASE_USER=
+DATABASE_PASSWORD=
+SUPERUSER_PASSWORD=
