--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,4 @@ uritemplate==0.6
 pysftp==0.2.8
 GoogleAppEngineCloudStorageClient==1.9.22.1
 git+https://github.com/BlinkUX/paramiko.git@v1.15-GAE#egg=paramiko
+django-dotenv==1.3.0
