--- a/circle.yml
+++ b/circle.yml
@@ -7,8 +7,8 @@ machine:
     version: 2.7.10
 dependencies:
   override:
-    - sudo /bin/sh /home/ubuntu/ISB-CGC-WebApp/shell/install-deps.sh
+    - sudo /bin/sh ./shell/install-deps.sh
 database:
   post:
     - mysql -u ubuntu -e "USE mysql; SET PASSWORD FOR 'ubuntu'@'localhost' = PASSWORD('isb')"
-    - sudo /bin/sh /home/ubuntu/ISB-CGC-WebApp/shell/database-setup.sh
+    - sudo /bin/sh ./shell/database-setup.sh
