--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,7 @@ machine:
   timezone:
     America/Los_Angeles
   environment:
+    CI: true
     PYTHONPATH: /home/ubuntu/ISB-CGC-WebApp:/home/ubuntu/ISB-CGC-WebApp/lib
   python:
     version: 2.7.10
