--- a/circle.yml
+++ b/circle.yml
@@ -2,14 +2,13 @@ machine:
   timezone:
     America/Los_Angeles
   environment:
-    CI: true
     PYTHONPATH: /home/ubuntu/ISB-CGC-WebApp:/home/ubuntu/ISB-CGC-WebApp/lib
   python:
     version: 2.7.10
 dependencies:
   override:
-    - sudo /bin/sh ./shell/install-deps.sh
+    - sudo -E /bin/sh ./shell/install-deps.sh
 database:
   post:
     - mysql -u ubuntu -e "USE mysql; SET PASSWORD FOR 'ubuntu'@'localhost' = PASSWORD('isb')"
-    - sudo /bin/sh ./shell/database-setup.sh
+    - sudo -E /bin/sh ./shell/database-setup.sh
