Skip the file in app.yaml
Just as an incase. Don't want to push a sudo python interpreter shell to the web folder if we can help it.

--- a/app.yaml
+++ b/app.yaml
@@ -41,3 +41,6 @@ env_variables:
   DJANGO_SETTINGS_MODULE: 'GenespotRE.settings' 
   SETTINGS_VERSION: 'dev'
   VERSION_NAME: 'default'
+
+skip_files:
+- python-su.sh
