--- a/circle.yml
+++ b/circle.yml
@@ -12,3 +12,9 @@ database:
   post:
     - mysql -u ubuntu -e "USE mysql; SET PASSWORD FOR 'ubuntu'@'localhost' = PASSWORD('isb')"
     - sudo -E /bin/sh ./shell/database-setup.sh
+deployment:
+  staging:
+    branch: master
+    commands:
+      - PATH=$PATH:/home/ubuntu/ISB-CGC-Webapp/google-cloud-sdk/bin sudo -E shell/gcloud_authenticate.sh
+      - PATH=$PATH:/home/ubuntu/ISB-CGC-Webapp/google-cloud-sdk/bin sudo -E gcloud preview app deploy app.yaml --no-promote 
