--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,7 @@ database:
     - sudo -E /bin/sh ./shell/database-setup.sh
 deployment:
   staging:
-    branch: master
+    branch: [master, continuous-integration]
     commands:
       - PATH=$PATH:/home/ubuntu/google-cloud-sdk/bin sudo -E shell/gcloud_authenticate.sh
       - PATH=$PATH:/home/ubuntu/google-cloud-sdk/bin sudo -E gcloud preview app deploy app.yaml --no-promote
