--- a/circle.yml
+++ b/circle.yml
@@ -17,4 +17,5 @@ deployment:
     branch: [master, continuous-integration]
     commands:
       - sudo -E /bin/sh ./shell/gcloud_authenticate.sh
+      - sudo -E /bin/sh ./shell/gcloud-pull-staging-files.sh
       - sudo -E ./google-cloud-sdk/bin/gcloud preview app deploy app.yaml --no-promote --version staging
