--- a/circle.yml
+++ b/circle.yml
@@ -16,6 +16,7 @@ deployment:
   staging:
     branch: [master, continuous-integration]
     commands:
+      - sudo -E rm -rf ./lib
       - sudo -E /bin/sh ./shell/gcloud_authenticate.sh
       - sudo -E /bin/sh ./shell/gcloud-pull-staging-files.sh
       - sudo -E ./google-cloud-sdk/bin/gcloud preview app deploy app.yaml --no-promote --version staging
