--- a/.gitignore
+++ b/.gitignore
@@ -71,19 +71,14 @@ ISB-CGC-test-private-key.json
 settings.json
 advanced_settings.json
 *.patch
+GenespotRE/secret_settings.py
 migrations/
-.env
-*.env
-scripts/metadata_featdef_tables.sql
 
 # dummy datasets
 *.tsv
 *.csv
 *.xls
 *.txt
-
-# Vagrant Files
-.vagrant/
 
 # NodeJS dev-dependencies etc
 bower_components
