Re-Merge pull request #5 from BlinkUX/continuous-integration
This reverts commit f163f240f2e11d50d834bb99ac46d3388ecce91b which
reverted the merge operation. This is to break the merge back into a pull
request so it can be reviewed.

--- a/.gitignore
+++ b/.gitignore
@@ -71,14 +71,19 @@ ISB-CGC-test-private-key.json
 settings.json
 advanced_settings.json
 *.patch
-GenespotRE/secret_settings.py
 migrations/
+.env
+*.env
+scripts/metadata_featdef_tables.sql
 
 # dummy datasets
 *.tsv
 *.csv
 *.xls
 *.txt
+
+# Vagrant Files
+.vagrant/
 
 # NodeJS dev-dependencies etc
 bower_components
