--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-runtime: python27 #custom #use 'python27' for pycharm configuration
+runtime: custom #use 'python27' for pycharm configuration
 module: default
 api_version: 1
 threadsafe: true
