--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,7 @@ database:
     - sudo -E /bin/sh ./shell/database-setup.sh
 deployment:
   staging:
-    branch: [master]
+    branch: [continuous-integration]
     commands:
       - sudo -E rm -rf ./lib
       - sudo -E /bin/sh ./shell/gcloud_authenticate.sh
