--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,23 @@
-runtime: custom #use 'python27' for pycharm configuration
-module: default
+###
+#
+# Copyright 2015, Institute for Systems Biology
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#    http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+###
+
+runtime: custom
+module: mvm
 api_version: 1
 threadsafe: true
 vm: true
@@ -38,9 +56,16 @@ handlers:
   upload: static/robots.txt
 
 env_variables:
+  GAE_TMP_FORCE_REUSE_API_CONNECTION: true
   DJANGO_SETTINGS_MODULE: 'GenespotRE.settings' 
-  SETTINGS_VERSION: 'dev'
-  VERSION_NAME: 'default'
+  SETTINGS_VERSION: 'prod'
 
 skip_files:
 - python-su.sh
+- ^(.*/)?#.*#$
+- ^(.*/)?.*~$
+- ^(.*/)?.*\.py[co]$
+- ^(.*/)?.*/RCS/.*$
+- ^(.*/)?\.(?!env).*$
+- ^google_appengine/.*$
+- ^google-cloud-sdk/.*$
