Use Dynamic Repo name in build scripts
So that we can build without these hard-coded values messing us up. Circle CI provides the name in a variable we can use so just using that when we're doing CI

--- a/circle.yml
+++ b/circle.yml
@@ -2,7 +2,7 @@ machine:
   timezone:
     America/Los_Angeles
   environment:
-    PYTHONPATH: /home/ubuntu/ISB-CGC-Webapp:/home/ubuntu/ISB-CGC-Webapp/lib
+    PYTHONPATH: /home/ubuntu/${CIRCLE_PROJECT_REPONAME}:/home/ubuntu/${CIRCLE_PROJECT_REPONAME}/lib
   python:
     version: 2.7.10
 dependencies:
