--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,4 @@ GoogleAppEngineCloudStorageClient==1.9.22.1
 git+https://github.com/BlinkUX/paramiko.git@v1.15-GAE#egg=paramiko
 django-dotenv==1.3.0
 django-finalware==0.1.1
+pexpect==4.0.1
