--- a/app.yaml
+++ b/app.yaml
@@ -16,7 +16,7 @@
 #
 ###
 
-runtime: custom
+runtime: python27
 module: mvm
 api_version: 1
 threadsafe: true
@@ -27,7 +27,7 @@ resources:
   memory_gb: 2.2
 
 builtins:
-- django_wsgi: on
+#- django_wsgi: on
 - remote_api: on
 - appstats: on
 - deferred: on
