Trying to deploy to uat

--- a/circle.yml
+++ b/circle.yml
@@ -14,9 +14,10 @@ database:
     - sudo -E /bin/sh ./shell/database-setup.sh
 deployment:
   staging:
-    branch: [master]
+    branch: [isb-cgc-uat]
     commands:
       - sudo -E rm -rf ./lib
       - sudo -E /bin/sh ./shell/gcloud_authenticate.sh
       - sudo -E /bin/sh ./shell/gcloud-pull-staging-files.sh
-      - sudo -E ./google-cloud-sdk/bin/gcloud preview app deploy app.yaml cron.yaml queue.yaml --promote
+      - sudo -E ./google-cloud-sdk/bin/gcloud preview app deploy app.yaml queue.yaml --no-promote
+
