--- a/circle.yml
+++ b/circle.yml
@@ -19,5 +19,5 @@ deployment:
       - sudo -E rm -rf ./lib
       - sudo -E /bin/sh ./shell/gcloud_authenticate.sh
       - sudo -E /bin/sh ./shell/gcloud-pull-staging-files.sh
-      - sudo -E ./google-cloud-sdk/bin/gcloud preview app deploy app.yaml queue.yaml --no-promote
+      - sudo -E ./google-cloud-sdk/bin/gcloud preview app deploy app.yaml queue.yaml --promote
 
