--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,8 @@ dependencies:
 database:
   post:
     - mysql -u ubuntu -e "USE mysql; SET PASSWORD FOR 'ubuntu'@'localhost' = PASSWORD('isb')"
+    - sudo -E /bin/sh ./shell/gcloud_authenticate.sh
+    - sudo -E /bin/sh ./shell/gcloud-pull-staging-files.sh
     - sudo -E /bin/sh ./shell/database-setup.sh
 deployment:
   staging:
