--- a/circle.yml
+++ b/circle.yml
@@ -19,6 +19,6 @@ deployment:
       - sudo -E rm -rf ./lib
       - sudo -E /bin/sh ./shell/gcloud_authenticate.sh
       - sudo -E /bin/sh ./shell/gcloud-pull-staging-files.sh
-      - sudo -E ./google_appengine/appcfg.py update . --noauth2_local_webserver
-      - sudo -E ./google_appengine/appcfg.py update_cron . --noauth2_local_webserver
-      - sudo -E ./google_appengine/appcfg.py update_queues . --noauth2_local_webserver
+      - sudo -E ./google_appengine/appcfg.py -A isb-cgc update . --noauth_local_webserver
+      - sudo -E ./google_appengine/appcfg.py -A isb-cgc update_cron . --noauth_local_webserver
+      - sudo -E ./google_appengine/appcfg.py -A isb-cgc update_queues . --noauth_local_webserver
