--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,7 @@ database:
     - sudo -E /bin/sh ./shell/database-setup.sh
 deployment:
   staging:
-    branch: [BlinkUX-blink-pr]
+    branch: [master]
     commands:
       - sudo -E rm -rf ./lib
       - sudo -E /bin/sh ./shell/gcloud_authenticate.sh
