CLeaning up settings

--- a/app.yaml
+++ b/app.yaml
@@ -16,7 +16,7 @@
 #
 ###
 
-runtime: custom #custom
+runtime: custom
 module: mvm
 api_version: 1
 threadsafe: true
@@ -27,7 +27,6 @@ resources:
   memory_gb: 2.2
 
 builtins:
-#- django_wsgi: on
 - remote_api: on
 - appstats: on
 - deferred: on
@@ -65,7 +64,6 @@ handlers:
 env_variables:
   GAE_TMP_FORCE_REUSE_API_CONNECTION: true
   DJANGO_SETTINGS_MODULE: 'GenespotRE.settings'
-  SETTINGS_VERSION: 'prod'
 
 skip_files:
 - python-su.sh
