--- a/cron.yaml
+++ b/cron.yaml
@@ -20,18 +20,24 @@ cron:
 - description: 2x/day automated logout job
   url: /tasks/check_users_sweeper
   schedule: every 12 hours
+  login: admin
 - description: CloudSQL logging
   url: /tasks/CloudSQL_logging
   schedule: every 24 hours
+  login: admin
 - description: IAM logging
   url: /tasks/IAM_logging
   schedule: every 1 minutes
+  login: admin
 - description: Admin Directory API logging
   url: /tasks/create_and_log_reports
   schedule: every 24 hours
+  login: admin
 - description: log ACL changes on buckets
   url: /tasks/log_acls
   schedule: every 1 minutes
+  login: admin
 - description: load billing tables
   url: /tasks/load_billing_to_bigquery
   schedule: every 24 hours
+  login: admin
