enabled types on clinical data to be attributes of variable pills, now just need to save them to the already altered variable models

--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,7 @@ target/
 .env
 *.env
 scripts/metadata_featdef_tables.sql
+scripts/prod_main_metadata_feature_defs_031516.sql
 
 # dummy datasets
 *.tsv
