--- a/app.yaml
+++ b/app.yaml
@@ -16,7 +16,7 @@
 #
 ###
 
-runtime: custom
+runtime: python27
 module: mvm
 api_version: 1
 threadsafe: true
@@ -27,13 +27,21 @@ resources:
   memory_gb: 2.2
 
 builtins:
+#- django_wsgi: on
 - remote_api: on
 - appstats: on
 - deferred: on
 
+automatic_scaling:
+  min_num_instances: 1
+  max_num_instances: 1
+  cool_down_period_sec: 60
+  cpu_utilization:
+    target_utilization: 0.5
+
 handlers:
 - url: /favicon.ico
-  static_files: static/img/favicon.ico
+  static_files: static/img/lsdf/favicon.ico
   upload: static/imgfavicon.ico
   secure: always
 - url: /static
@@ -50,10 +58,6 @@ handlers:
   script: google.appengine.ext.deferred.deferred.application
   login: admin
   secure: always
-- url: /tasks/.*
-  script: main.application
-  secure: always
-  login: admin
 - url: /.*
   script: main.application
   secure: always
@@ -68,6 +72,7 @@ handlers:
 env_variables:
   GAE_TMP_FORCE_REUSE_API_CONNECTION: true
   DJANGO_SETTINGS_MODULE: 'GenespotRE.settings'
+  SETTINGS_VERSION: 'prod'
 
 skip_files:
 - python-su.sh
