--- a/app.yaml
+++ b/app.yaml
@@ -32,13 +32,6 @@ builtins:
 - appstats: on
 - deferred: on
 
-automatic_scaling:
-  min_num_instances: 1
-  max_num_instances: 1
-  cool_down_period_sec: 60
-  cpu_utilization:
-    target_utilization: 0.5
-
 handlers:
 - url: /favicon.ico
   static_files: static/img/lsdf/favicon.ico
@@ -58,6 +51,10 @@ handlers:
   script: google.appengine.ext.deferred.deferred.application
   login: admin
   secure: always
+- url: /tasks/.*
+  script: main.application
+  secure: always
+  login: admin
 - url: /.*
   script: main.application
   secure: always
@@ -72,7 +69,6 @@ handlers:
 env_variables:
   GAE_TMP_FORCE_REUSE_API_CONNECTION: true
   DJANGO_SETTINGS_MODULE: 'GenespotRE.settings'
-  SETTINGS_VERSION: 'prod'
 
 skip_files:
 - python-su.sh
