--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 requests==2.3.0
-django==1.7.1
+django==1.8
 MySQL-python==1.2.5
 pycrypto==2.6.1
 PyYAML==3.11
 WebOb==1.5.0
-django-allauth==0.19.1
+django-allauth==0.21.0 #can't use v0.22 because context_processor -> template tags
 ecdsa==0.13
 google-api-python-client==1.4.2
 httplib2==0.9.2
@@ -18,7 +18,7 @@ simplejson==3.8.1
 six==1.10.0  #1.5.2
 uritemplate==0.6
 GoogleAppEngineCloudStorageClient==1.9.22.1
-django-dotenv==1.3.0
-django-finalware==0.1.1
+django-dotenv==1.4.1
+django-finalware==0.1.3
 pexpect==4.0.1
 
