--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,6 @@ static/js/visualizations/mock_histogram_data.js
 # ignore Windows-related things
 .npmignore
 DEV_README
+
+ISB-CGC-Common
+ISB-CGC-Common/
