--- a/.gitignore
+++ b/.gitignore
@@ -101,5 +101,8 @@ static/js/visualizations/mock_histogram_data.js
 .npmignore
 DEV_README
 
+ISB-CGC-API
+ISB-CGC-API/
+
 ISB-CGC-Common
 ISB-CGC-Common/
