--- a/circle.yml
+++ b/circle.yml
@@ -19,4 +19,4 @@ deployment:
     branch: [master]
     commands:
       - sudo -E rm -rf ./lib
-      - sudo -E ./google-cloud-sdk/bin/gcloud preview app deploy app.yaml --promote
+      - sudo -E ./google-cloud-sdk/bin/gcloud app deploy
