--- a/app.yaml
+++ b/app.yaml
@@ -72,6 +72,7 @@ skip_files:
 - ^(.*/)?.*\.py[co]$
 - ^(.*/)?.*/RCS/.*$
 - ^(.*/)?\.(?!env).*$
+- ^google_appengine/.*$
 - ^google-cloud-sdk/.*$
 - ^google_appengine\.zip$
 - ^(.*/)?.*\.sql$
