--- a/app.yaml
+++ b/app.yaml
@@ -16,7 +16,7 @@
 #
 ###
 
-runtime: python
+runtime: custom
 env: flex
 module: default
 api_version: 1
@@ -63,7 +63,6 @@ handlers:
   upload: static/robots.txt
 
 env_variables:
-  GAE_TMP_FORCE_REUSE_API_CONNECTION: true
   DJANGO_SETTINGS_MODULE: 'GenespotRE.settings'
 
 skip_files:
