--- a/app.yaml
+++ b/app.yaml
@@ -36,9 +36,9 @@ handlers:
   static_files: static/img/favicon.ico
   upload: static/imgfavicon.ico
   secure: always
-#- url: /static
-#  static_dir: static
-#  secure: always
+- url: /static
+  static_dir: static
+  secure: always
 - url: /_ah/spi/.*
   script: cgc_api.APPLICATION
   secure: always
@@ -72,7 +72,7 @@ skip_files:
 - ^(.*/)?.*\.py[co]$
 - ^(.*/)?.*/RCS/.*$
 - ^(.*/)?\.(?!env).*$
-#- ^google_appengine/.*$
+- ^google_appengine/.*$
 - ^google-cloud-sdk/.*$
 - ^google_appengine\.zip$
 - ^(.*/)?.*\.sql$
