--- a/app.yaml
+++ b/app.yaml
@@ -17,10 +17,10 @@
 ###
 
 runtime: custom
-env: flex
 module: default
 api_version: 1
 threadsafe: true
+vm: true
 
 resources:
   cpu: .5
@@ -36,9 +36,9 @@ handlers:
   static_files: static/img/favicon.ico
   upload: static/imgfavicon.ico
   secure: always
-- url: /static
-  static_dir: static
-  secure: always
+#- url: /static
+#  static_dir: static
+#  secure: always
 #- url: /_ah/spi/.*
 #  script: cgc_api.APPLICATION
 #  secure: always
