--- a/app.yaml
+++ b/app.yaml
@@ -40,9 +40,9 @@ handlers:
 #- url: /static
 #  static_dir: static
 #  secure: always
-#- url: /_ah/spi/.*
-#  script: cgc_api.APPLICATION
-#  secure: always
+- url: /_ah/spi/.*
+  script: cgc_api.APPLICATION
+  secure: always
 - url: /remoteapi.*
   script: google.appengine.ext.remote_api.handler.application
   login: admin
@@ -72,7 +72,7 @@ skip_files:
 - ^(.*/)?.*\.py[co]$
 - ^(.*/)?.*/RCS/.*$
 - ^(.*/)?\.(?!env).*$
-- ^google_appengine/.*$
+#- ^google_appengine/.*$
 - ^google-cloud-sdk/.*$
 - ^google_appengine\.zip$
 - ^(.*/)?.*\.sql$
