--- a/requirements.txt
+++ b/requirements.txt
@@ -17,8 +17,8 @@ rsa==3.2
 simplejson==3.8.1
 six==1.10.0  #1.5.2
 uritemplate==0.6
-GoogleAppEngineCloudStorageClient==1.9.22.1
 django-dotenv==1.4.1
 django-finalware==0.1.3
 pexpect==4.0.1
+gunicorn==19.6.0
 
