--- a/app.yaml
+++ b/app.yaml
@@ -36,15 +36,8 @@ handlers:
   static_files: static/img/favicon.ico
   upload: static/imgfavicon.ico
   secure: always
-#- url: /static
-#  static_dir: static
-#  secure: always
-- url: /_ah/spi/.*
-  script: cgc_api.APPLICATION
-  secure: always
-- url: /remoteapi.*
-  script: google.appengine.ext.remote_api.handler.application
-  login: admin
+- url: /static
+  static_dir: static
   secure: always
 - url: /_ah/queue/deferred
   script: google.appengine.ext.deferred.deferred.application
@@ -57,9 +50,6 @@ handlers:
   static_dir: static/admin
   expiration: 0
   secure: always
-- url: /robots.txt
-  static_files: static/robots.txt
-  upload: static/robots.txt
 
 env_variables:
   GAE_TMP_FORCE_REUSE_API_CONNECTION: true
@@ -72,7 +62,6 @@ skip_files:
 - ^(.*/)?.*\.py[co]$
 - ^(.*/)?.*/RCS/.*$
 - ^(.*/)?\.(?!env).*$
-#- ^google_appengine/.*$
 - ^google-cloud-sdk/.*$
 - ^google_appengine\.zip$
 - ^(.*/)?.*\.sql$
