--- a/app.yaml
+++ b/app.yaml
@@ -32,13 +32,13 @@ builtins:
 - deferred: on
 
 handlers:
-- url: /favicon.ico
-  static_files: static/img/favicon.ico
-  upload: static/imgfavicon.ico
-  secure: always
-- url: /static
-  static_dir: static
-  secure: always
+#- url: /favicon.ico
+#  static_files: static/img/favicon.ico
+#  upload: static/imgfavicon.ico
+#  secure: always
+#- url: /static
+#  static_dir: static
+#  secure: always
 #- url: /_ah/spi/.*
 #  script: cgc_api.APPLICATION
 #  secure: always
@@ -53,10 +53,10 @@ handlers:
 - url: /.*
   script: main.application
   secure: always
-- url: /static/admin
-  static_dir: static/admin
-  expiration: 0
-  secure: always
+#- url: /static/admin
+#  static_dir: static/admin
+#  expiration: 0
+#  secure: always
 
 env_variables:
   DJANGO_SETTINGS_MODULE: 'GenespotRE.settings'
@@ -68,7 +68,7 @@ skip_files:
 - ^(.*/)?.*\.py[co]$
 - ^(.*/)?.*/RCS/.*$
 - ^(.*/)?\.(?!env).*$
-- ^google_appengine/.*$
+#- ^google_appengine/.*$
 - ^google-cloud-sdk/.*$
 - ^google_appengine\.zip$
 - ^(.*/)?.*\.sql$
