--- a/app.yaml
+++ b/app.yaml
@@ -36,9 +36,9 @@ handlers:
 #  static_files: static/img/favicon.ico
 #  upload: static/imgfavicon.ico
 #  secure: always
-#- url: /static
-#  static_dir: static
-#  secure: always
+- url: /static
+  static_dir: static
+  secure: always
 #- url: /_ah/spi/.*
 #  script: cgc_api.APPLICATION
 #  secure: always
