--- a/app.yaml
+++ b/app.yaml
@@ -18,7 +18,7 @@
 
 runtime: custom
 env: flex
-service: mvm
+service: default
 api_version: 1
 threadsafe: true
 #entrypoint: gunicorn -b :$PORT GenespotRE.wsgi
