--- a/requirements.txt
+++ b/requirements.txt
@@ -19,5 +19,6 @@ django-dotenv==1.4.1
 django-finalware==0.1.3
 django-allauth==0.30.0
 django-sslify==0.2.7
+django-maintenance-mode==0.4.5
 pexpect==4.0.1
 gunicorn==19.6.0
