--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ PyYAML==3.11
 WebOb==1.5.0
 ecdsa==0.13
 google-api-python-client==1.6.1
-google-cloud==0.22.0
+google-cloud-pubsub==0.22.0
 httplib2==0.9.2
 python-openid==2.2.5
 pyasn1==0.1.9
