--- a/app.yaml
+++ b/app.yaml
@@ -59,7 +59,8 @@ handlers:
 #  secure: always
 
 # Disabling health check to see what this shows us
-enable_health_check: False
+health_check:
+  enable_health_check: False
 
 beta_settings:
     cloud_sql_instances: isb-cgc:us-central1:production
