--- a/app.yaml
+++ b/app.yaml
@@ -64,6 +64,9 @@ beta_settings:
 env_variables:
   DJANGO_SETTINGS_MODULE: 'GenespotRE.settings'
 
+health_check:
+  enable_health_check: False
+
 skip_files:
 - python-su.sh
 - ^(.*/)?#.*#$
