--- a/circle.yml
+++ b/circle.yml
@@ -22,4 +22,4 @@ deployment:
     branch: [master]
     commands:
       - sudo -E rm -rf ./lib
-      - sudo -E ./google-cloud-sdk/bin/gcloud app deploy --quiet
+      - sudo -E ./google-cloud-sdk/bin/gcloud app deploy --quiet --log=http
