--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,5 @@
 ###
-#
-# Copyright 2015, Institute for Systems Biology
+# Copyright 2017, Institute for Systems Biology
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,7 +12,6 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-#
 ###
 
 runtime: custom
@@ -21,7 +19,7 @@ env: flex
 service: mvm
 api_version: 1
 threadsafe: true
-#entrypoint: gunicorn -b :$PORT GenespotRE.wsgi
+#entrypoint: gunicorn -c gunicorn.conf.py -b :$PORT GenespotRE.wsgi -w 3 -t 130
 
 #resources:
 #  cpu: 2
