--- a/app.yaml
+++ b/app.yaml
@@ -63,7 +63,7 @@ env_variables:
   DJANGO_SETTINGS_MODULE: 'GenespotRE.settings'
 
 network:
-  instance_tag: isb_cgc_webapp
+  instance_tag: isb-cgc-webapp
 
 skip_files:
 - python-su.sh
