Added network instance tag

--- a/app.yaml
+++ b/app.yaml
@@ -64,6 +64,9 @@ beta_settings:
 env_variables:
   DJANGO_SETTINGS_MODULE: 'GenespotRE.settings'
 
+network:
+  instance_tag: isb-cgc-webapp
+
 skip_files:
 - python-su.sh
 - ^(.*/)?#.*#$
