-> Bugfix for program tabs on active cohorts -> Disease Code fix for CCLE and TARGET -> Tuning health check frequency -> Improving TCGA and CCLE filter fixes -> Moving build to variables, out of var fave list

--- a/app.yaml
+++ b/app.yaml
@@ -65,6 +65,10 @@ env_variables:
 network:
   instance_tag: isb-cgc-webapp
 
+health_check:
+  enable_health_check: True
+  check_interval_sec: 5
+
 skip_files:
 - python-su.sh
 - ^(.*/)?#.*#$
