--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ python-openid==2.2.5
 pyasn1==0.1.9
 pytz==2015.7
 requests-oauthlib==0.7.0
+oauth2client==3.0.0
 rsa==3.2
 simplejson==3.8.1
 six==1.10.0  #1.5.2
