-> Shutting off health checks to see if that lets the VM run

--- a/app.yaml
+++ b/app.yaml
@@ -66,8 +66,7 @@ network:
   instance_tag: isb-cgc-webapp
 
 health_check:
-  enable_health_check: True
-  check_interval_sec: 5
+  enable_health_check: False
 
 skip_files:
 - python-su.sh
