--- a/app.yaml
+++ b/app.yaml
@@ -66,7 +66,8 @@ network:
   instance_tag: isb-cgc-webapp
 
 health_check:
-  enable_health_check: False
+  enable_health_check: True
+  check_interval_sec: 15
 
 skip_files:
 - python-su.sh
