-> Trying to fix health checks

--- a/app.yaml
+++ b/app.yaml
@@ -68,6 +68,8 @@ network:
 health_check:
   enable_health_check: True
   check_interval_sec: 15
+  restart_threshold: 15
+
 
 skip_files:
 - python-su.sh
