--- a/app.yaml
+++ b/app.yaml
@@ -65,10 +65,11 @@ env_variables:
 network:
   instance_tag: isb-cgc-webapp
 
-health_check:
-  enable_health_check: True
-  check_interval_sec: 15
-  restart_threshold: 15
+# Disabled until we know why they're not working
+#health_check:
+#  enable_health_check: True
+#  check_interval_sec: 15
+#  restart_threshold: 15
 
 
 skip_files:
