--- a/app.yaml
+++ b/app.yaml
@@ -66,8 +66,8 @@ network:
   instance_tag: isb-cgc-webapp
 
 # Disabled until we know why they're not working
-#health_check:
-#  enable_health_check: True
+health_check:
+  enable_health_check: False
 #  check_interval_sec: 15
 #  restart_threshold: 15
 
