--- a/app.yaml
+++ b/app.yaml
@@ -67,9 +67,9 @@ network:
 
 # Disabled until we know why they're not working
 health_check:
-  enable_health_check: True
-  check_interval_sec: 15
-  restart_threshold: 15
+  enable_health_check: False
+#  check_interval_sec: 15
+#  restart_threshold: 15
 
 
 skip_files:
