--- a/app.yaml
+++ b/app.yaml
@@ -57,7 +57,7 @@ handlers:
 #  secure: always
 
 beta_settings:
-    cloud_sql_instances: isb-cgc:us-central1:dev
+    cloud_sql_instances: isb-cgc:us-central1:dev-v3
 
 env_variables:
   DJANGO_SETTINGS_MODULE: 'GenespotRE.settings'
